옛날 소스에서 xslt 나 잘못설정한 것을 java 나 json 으로 변경

--- a/_posts/2009-02-24-web.xml.md
+++ b/_posts/2009-02-24-web.xml.md
@@ -8,7 +8,7 @@ comments: true
 web.xml 한글 변환 관련 Encoding 설정 방법
 ---
 
-```$xslt
+```java
 /*
  * To change this template, choose Tools | Templates
  * and open the template in the editor.
@@ -44,7 +44,7 @@ public class CharacterEncodingFilter implements Filter {
 위의 소스는 필터 기능을 통해, 넘어온 캐릭터셋으로 변경하는 로직입니다.
 
 web.xml 안에
-```$xslt
+```
     <filter>
     <filter-name>CharacterEncodingFilter</filter-name>
     <filter-class>kr.co.ithrd.common.CharacterEncodingFilter</filter-class>
