CLOSE_WAIT, TIME_WAIT

--- a/_posts/2019-01-03-netstat.md
+++ b/_posts/2019-01-03-netstat.md
@@ -62,3 +62,4 @@ tcp        0      0 xxx.xxx.xxx.3:42590            xxx.xxx.xxx.103:7205         
 ```
 
 netstat -an 를 사용하여 현재 720X 포트를 사용하는 ESTABLISHED된 소켓을 확인할 수 있습니다.
+CLOSE_WAIT 나 ESTABLISHED, TIME_WAIT 처리를 정상적으로 하고 있는지 확인합니다.
