참조주소 추가

--- a/_posts/2019-04-26-baemin20190425.md
+++ b/_posts/2019-04-26-baemin20190425.md
@@ -60,19 +60,8 @@ comments: true
 
 장난감 프로젝트를 빨리 개발해야 겠습니다.  (결론)
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+정확한 세미나에 대한 내용은 참조 주소에서 확인할 수 있습니다.
+(잘정리되어있습니다.)
 
 
 -----
