--- a/_posts/2019-04-26-baemin20190425.md
+++ b/_posts/2019-04-26-baemin20190425.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2019-04-25"
+title: "baemin_seminar"
 comments: true
 ---
 
@@ -25,16 +25,27 @@ comments: true
 
 
 에서, 1번부터 7번까지에 대해 기초적인 부분부터 자세히 설명해주셨습니다.  
+
+평생동안 연습하겠다는 마음가짐으로 시작하고, 결혼하지 않은 사람이라면, 조금더 공부하는 마음가짐을 가졌으면 좋겠다고 하였습니다.
+
 가장 공감이 가던 것은,  
 회사 소스에 바로 적용하지 말고, 장난감 프로젝트를 찾아서 만들라는 점이었습니다.  
 회사에 소스를 적용해보고, 리팩토링한 후에 롤백을 한 경험이 몇번 있었기에 더욱더 동감이 되었습니다.  
 
+주변 환경에 영향을 받지 않고 꾸준히 연습할 수 있는 환경이라는 것이 매우 중요한거 같습니다.
+
 
 결론부터 이야기하자면 의식적인 TDD, 리팩토링 세미나에서 요구하고자한 내용은,  
+
+```
 1. ELSE 를 쓰지 않는 조건에 대한 논리를 최소화하여 다형성 유도  
 2. 객체지향프로그램의 성배인 데이터의 캡슐화  
+```
+
 로 축약할 수 있을 거 같습니다.  
+
 결론 : 코드나 아이디어의 중복이 없는 코드를 만들자!  
+
 
 마틴 파울러 형님은 컴퓨터가 이해하는 코드는 어느 바보나 짤 수 있다. 좋은 프로그래머는 사람이 이해하는 코드를 짠다  
 (Any fool can write code that a computer can understand. Good programmers write code that humans can understand.)고 하셨습니다.  
