server.xml 문구 수정 인텔리J 테스트시 살아있는 문구 삭제

--- a/_posts/2019-05-02-hostsname_1.md
+++ b/_posts/2019-05-02-hostsname_1.md
@@ -4,7 +4,7 @@ title: "톰켓 버추얼 호스팅 설정하기"
 comments: true
 ---
 
-server.xml 을 오픈합니다.
+server.xml 을 open
 ---
 
 4월 30일 hosts 변경 후, 특정 ip로는 접속이 안되는 서버가 있어,  
