참조 주소 추가

--- a/_posts/2019-06-03-Base64.md
+++ b/_posts/2019-06-03-Base64.md
@@ -11,6 +11,11 @@ Simple 하게 java.util.Base64 에서 제공하는 기능을 사용.
 Base64 인코딩, 디코딩을 자주하는데, 자체 라이브러리가 아닐 경우 byte 를 다시 String 으로 변환해서 테스트하는 게 귀찮아서 history로 남깁니다.
 ```
 
+[Base64](https://docs.oracle.com/javase/8/docs/api/java/util/Base64.html)  
+[Base64.Encoder](https://docs.oracle.com/javase/8/docs/api/java/util/Base64.Encoder.html)  
+[Base64.Decoder](https://docs.oracle.com/javase/8/docs/api/java/util/Base64.Decoder.html)  
+
+
 ```java
 import java.io.UnsupportedEncodingException;
 import java.util.Base64;
