sda, HDD, SDD 속성값 정의

--- a/_posts/2019-05-14-lsblk.md
+++ b/_posts/2019-05-14-lsblk.md
@@ -18,3 +18,23 @@ lsblk -d -o name,rota
 
 SSD 로 변경되어가는 추세입니다. 서버 상태가 느린 서버가 있어. SSD인지 HDD인지 확인하기 위한 명령얼을 찾다가 해당 명령어를 알게 되어,
 히스토리로 남깁니다.
+
+아래와 같이 명령어를 수행했을때 개별 디스크마다 출력이 되는데 1은 HDD, 0은 SSD이다.
+
+```
+lsblk -d -o name,rota
+NAME ROTA
+sda     0
+sr0     1
+```
+
+sda 는 SSD 를 사용하고 있다고 보면됩니다.
+
+```
+lsblk -d -o name,rota
+NAME ROTA
+sda     1
+sr0     1
+```
+
+sda 는 HDD 를 사용하고 있다고 보면됩니다. 
