--- a/_posts/2019-05-14-lsblk.md
+++ b/_posts/2019-05-14-lsblk.md
@@ -37,4 +37,13 @@ sda     1
 sr0     1
 ```
 
-sda 는 HDD 를 사용하고 있다고 보면됩니다. 
+sda 는 HDD 를 사용하고 있다고 보면됩니다.
+
+또 다른 방법으로는,
+
+```
+cat /sys/block/sda/queue/rotational
+```
+
+를 쳤을 경우, 1 이면, hard disks!  
+ 0이면, SSD 입니다.
