--- a/_posts/0000-06-12-iloveyou.md
+++ b/_posts/0000-06-12-iloveyou.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Perhaps JAVA_HOME does not point to the JDK 오류"
+title: "우리 남편이 화를 너무 내요"
 date: 2009-01-16 14:30:00 +0900
 comments: true
 ---
