조금 보기 편하게 문구 수정

--- a/_posts/2019-05-02-hostsname_1.md
+++ b/_posts/2019-05-02-hostsname_1.md
@@ -15,9 +15,9 @@ server.xml 을 open
 특정 아이피로 호출 했을 경우,
 접속되는 아이피는 자동으로 defaultHost 로 변경되게 됩니다.
 
-그런데 vim /etc/hosts 에도없을 경우에는 톰캣에서 해당 IP를 찾지 못했다고 판단하여 팅겨내게 됩니다.
+그런데 vim /etc/hosts 에도 없을 경우에는 톰캣에서 해당 IP를 찾지 못했다고 판단하여 팅겨내게 됩니다.
 
-/etc/hosts 에 없을 경우 Alias 에라도 등록해두면,
+/etc/hosts 에 없을 경우 server.xml Alias 에라도 등록해두면,
 처리됩니다.
 
 ```xml
