--- a/_posts/2019-07-03-logstash.md
+++ b/_posts/2019-07-03-logstash.md
@@ -36,7 +36,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["127.0.0.1:9200"]
-    index => "adfit_20190702_1"
+    index => "_20190702_1"
   }
 }
 
@@ -47,3 +47,8 @@ mode => read : 해당 파일을 전부 읽어드리겠다는 모드 설정입니
 log 에서 한줄씩 읽어서 엘라스틱서치에 보내게 됩니다. read 설정시 디폴트가 해당 파일을 삭제합니다.  
 
 grok : grok 플러그인을 통해, 해당 패턴을 json 형태로 변환해줍니다.  
+grok 에 관해서는 해당 url에서 패턴을 찾을 수 있습니다.  (https://grokdebug.herokuapp.com/)
+
+날짜는 파일에 있는 timestamp 로 index를 잡아야하므로,
+timestamp 패턴을 date 에 적용 후,
+해당 값을 실제 timestamp 에 target 시킵니다.  
