--- a/_posts/2019-07-03-logstash.md
+++ b/_posts/2019-07-03-logstash.md
@@ -52,3 +52,8 @@ grok 에 관해서는 해당 url에서 패턴을 찾을 수 있습니다.  (http
 날짜는 파일에 있는 timestamp 로 index를 잡아야하므로,
 timestamp 패턴을 date 에 적용 후,
 해당 값을 실제 timestamp 에 target 시킵니다.  
+
+```
+logstash -f "config 파일 경로"
+```
+로 파일을 실행시킵니다.  
