line 정렬 마이크로 서비스 따라하기 꿀밋업 시리즈

--- a/_posts/2019-07-23-msa-api.md
+++ b/_posts/2019-07-23-msa-api.md
@@ -98,19 +98,21 @@ DDD 와 MSA 를 이용한 서비스 리빌드 - EventStorm, Boris, SNAP-E, Stori
 
 남은 밋업 시리즈
  ```
-3탄_마이크로 서비스부터 만들어야지? - 스프링 부트를 사용한 단일 마이크로 서비스 개발 (로컬 환경) | 페어 프로그래밍 데모 (테스트 작성)
-
-4탄_티끌 모아 태산 만들기 - 스프링 클라우드를 사용한 마이크로 서비스 연결
-
-5탄_이상하다 내 컴퓨터에서는 잘 됐었는데… - 개발된 코드를 변경 없이 로컬에서 클라우드로 (부제: 도커때문에 다들 고생이 많다)
+3탄_마이크로 서비스부터 만들어야지?
+  - 스프링 부트를 사용한 단일 마이크로 서비스 개발 (로컬 환경) | 페어 프로그래밍 데모 (테스트 작성)
+4탄_티끌 모아 태산 만들기
+  - 스프링 클라우드를 사용한 마이크로 서비스 연결
+5탄_이상하다 내 컴퓨터에서는 잘 됐었는데…
+  - 개발된 코드를 변경 없이 로컬에서 클라우드로 (부제: 도커때문에 다들 고생이 많다)
 Pivotal Application Service 를 사용한 스프링 애플리케이션과 데이터베이스 배포
-
-6탄_우리는 아마존:애저:구글:센터 서비스 비율 조정할 수 있단다. - 대륙을 넘나드는 빠르고 안전한 데이터의 저장과 복제 (부제: 멀티 클라우드 및 멀티 리전에서의 가용성 확보)
-
-7탄_데이터베이스를 끈다니 농담도 잘하셔. (부제: 데이터 베이스를 꺼본다고?) - 서비스에 카오스 엔지니어링 적용하기
-
-8탄_마이크로서비스가 기능 단위인지 클래스 단위인지 고만 좀 물어봅시다. - API 게이트웨이의 오프로딩을 위한 서버리스 적용
-
-9탄_주가 예측 모델 제공하기 - 서비스에 데이터 과학의 적용을 통해 필요한 도구를 연동하고 적용하는 기술을 살펴봅니다.
+6탄_우리는 아마존:애저:구글:센터 서비스 비율 조정할 수 있단다.
+  - 대륙을 넘나드는 빠르고 안전한 데이터의 저장과 복제 (부제: 멀티 클라우드 및 멀티 리전에서의 가용성 확보)
+7탄_데이터베이스를 끈다니 농담도 잘하셔. (부제: 데이터 베이스를 꺼본다고?)
+  - 서비스에 카오스 엔지니어링 적용하기
+8탄_마이크로서비스가 기능 단위인지 클래스 단위인지 고만 좀 물어봅시다.
+  - API 게이트웨이의 오프로딩을 위한 서버리스 적용
+9탄_주가 예측 모델 제공하기
+  - 서비스에 데이터 과학의 적용을 통해 필요한 도구를 연동하고 적용하는 기술을 살펴봅니다.
 ```
-다음 밋업은 다음과 같습니다. 해당 내용에 대한 질문 과 답변에 대해서는 다시 정리해서 올릴 수 있도록 하겠습니다.   
+다음 밋업은 다음과 같습니다.
+해당 내용에 대한 질문 과 답변에 대해서는 다시 정리해서 올릴 수 있도록 하겠습니다.   
