문구변경및 메인화면 버그 수정

--- a/_posts/2018-06-04-ATOM.md
+++ b/_posts/2018-06-04-ATOM.md
@@ -10,7 +10,7 @@ comments: true
 
 [개발자 커리어 컨퍼런스](https://youngclown.github.io/2018/05/FASTCAMPUS)를 듣고,
 자기가 가지고 있는 지식을 공유하는 것 또한 자신이 아는 것을 정리하는 데 도움이 되는 하나의 방법이라는 이야기를 듣고,
-사내강사를 신청합니다.
+회사내 사내 강사를 신청하였습니다.
 
 부제 : 세중 github Copy & Paste 하기
 ---
