note 10 + dex not support

--- a/_posts/2019-08-12-note-dex.md
+++ b/_posts/2019-08-12-note-dex.md
@@ -4,7 +4,7 @@ title: "Linux on DeX"
 comments: true
 ---
 
-노트 10 구매 후 Linux on Dex를 통해 IntellJ를 실행해서 가지고 놀 수 있는지 궁금하여,
+노트 10 구매 후 Linux on Dex를 통해 IntellJ를 실행해서 가지고 코딩을 할 수 있는지 확인하기 위해,
 사전에 설치 방법을 기록에 남깁니다.
 
 사이트 :  https://www.linuxondex.com/
@@ -29,6 +29,17 @@ Ubuntu 16.04
 압출풀기를 진행 한 후, 컨테이너 생성하는 화면에서 압축을 푼 이미지를 선택합니다.  
 사이즈를 늘리며 셋팅을 완료합니다.
 
+
+2019-08-27 추가업데이트
+
+Note 10 + 를 수령받아 Linux on Dex 를 설치했지만 정상동작되지 않았습니다.
+
+[관련주소](https://us.community.samsung.com/t5/Note10/Linux-on-DeX-not-supported-on-Note-10/td-p/799848)
+```
+We certainly appreciate your interest in our products! Unfortunately, we are unable to speculate about the release of future updates. Please stay tuned to the page, and we will post publicly when an update becomes available. Thanks!
+```
+
+언제 적용될 수 있을지 기약없는 기다림이 지속되겠군요.
 
 -----
 # 참조
