--- a/_posts/2019-08-27-unicode.md
+++ b/_posts/2019-08-27-unicode.md
@@ -39,3 +39,14 @@ idea.native2ascii.lowercase=true
 
 이값을 추가해야한다고 하네요.
 (왜 여지껏 소문자로 잘 변환되고 있었는지는 의문입니다.)
+
+아마 자동으로 앞글자가 대문자로 변환하는 이슈가 아니라서 그런게 아닌가,
+
+intellij에서 properties파일 name명 자동으로 앞글자 대문자로 변경되는 문제
+
+```
+[MAC] application>intellij 패키지보기>bin>idea.properties
+[WIN] C:\Program Files (x86)\JetBrains\IntelliJ IDEA 최신버젼\bin\idea.properties
+```
+
+에서 idea.native2ascii.lowercase=true 추가
