--- a/_posts/2019-09-30-anagram.md
+++ b/_posts/2019-09-30-anagram.md
@@ -61,21 +61,35 @@ charAt(0) 를 빠트린거랑, for문안에 안전장치로 if문을 하나 더 
 
 ```    
   public static boolean anagramCheck(String first, String second) {
-        char[] firstChar = first.toCharArray();
-        char[] secondChar = second.toCharArray();
-        if (first.length() != second.length()) return false;
-
-        Arrays.sort(firstChar);
-        Arrays.sort(secondChar);
-
-        for (int i = 0; i < first.length(); i++) {
-            if(firstChar[i] != secondChar[i]) return false;
-        }
-        return true;
+      char[] fisrtChar = first.toCharArray();
+      char[] secondChar = second.toCharArray();
+      Arrays.sort(fisrtChar);
+      Arrays.sort(secondChar);
+      return new String(fisrtChar).equals(new String(secondChar));
   }
 ```
 
 30 라인의 길이가 10라인까지 줄어들었습니다.
-이펙티브 자바에서는 strem을 사용해서 처리하는 로직이 되어있는데,
-실제 해당 로직을 적용하는 것은 배보다 배꼽이 더 커보여,
-우선 조금더 고민해보고 업데이트 하도록 하겠습니다.
+이펙티브 자바에서는 strem을 사용해서 처리하는 로직이 있는데,
+해당 로직은 Stream<String> 에 담은 후에 처리하는 부분으로,
+실제 해당 로직을 적용하는 것은 배보다 배꼽이 더 커보였습니다.
+
+
+최종적으로 처리하는 람다함수는 다음과 같습니다.
+```
+public static boolean anagramCheck(String... list) {
+    long count = Stream.of(list)
+            .map(String::toCharArray)
+            .peek(Arrays::sort)
+            .map(String::valueOf)
+            .distinct()
+            .count();
+    return count == 1;
+}
+```
+넘어온 list 를 Stream에 담습니다. map 에 toCharArray를 담은 후 peek 로 ArrayList를 sort합니다.
+다시 map으로 sort 된 값을 다시금 string으로 변환합니다.
+distinct로 중복된 값을 제외한 후 count()를 샙니다.
+만약 char로 정렬되지 않을 경우, count는 1이 아니게 됩니다. 
+
+계속 공부를 해야한다는 걸 다시금 느낍니다.
