--- a/_posts/2019-09-30-anagram.md
+++ b/_posts/2019-09-30-anagram.md
@@ -6,7 +6,7 @@ comments: true
 
 
 
-```
+```java
 anagramCheck("abcd","bcad");
 anagramCheck("abcd","ecad");
 
@@ -16,10 +16,11 @@ public static boolean anagramCheck(String first, String second) {
     return result;
 }
 ```
+위의 문제에 대해서 손코딩을 해야했습니다.
+아무것도 주어지지 않은 상태라서, 안전하게 기본문법만으로 코딩했습니다.
+(긴장해서 아무생각도 나지 않았다는게 더 정답..)
 
-라는 손코딩에서
-
-```
+```java
   public static boolean anagramCheck(String first, String second) {
         int firstLength = first.length();
         int secondLength = second.length();
@@ -51,15 +52,16 @@ public static boolean anagramCheck(String first, String second) {
         return check == firstLength;
     }
 ```
-다음과 같이 작성했습니다.
-charAt(0) 를 빠트린거랑, for문안에 안전장치로 if문을 하나 더 쓴거 빼고는 실제 손코딩했던 것과 동일한 로직입니다.
 
-다만, 실제 원했던 것은 Stream 을 사용하여 간략하게 작성해야하는 것이 아닌가 싶어,
+다음과 같이 작성했습니다.
+실제 손코딩에서는 charAt(0) 를 빠트린거랑, for문안에 안전장치로 if문을 하나 더 쓴거 빼고는 실제 손코딩했던 것과 동일한 로직입니다.
+
+실제 원했던 것은 Stream 을 사용하여 코드를 간략하게 작성해야하는 것이 아닌가 싶어,
 해당 Stream 으로 어떻게 읽기 편하게 작성해야하는지 공부(연습)해 보았습니다.
 
 우선 기억이 안났던, toCharArray 메소드를 사용하여, char 로 변환해서 처리했습니다.
 
-```    
+```java   
   public static boolean anagramCheck(String first, String second) {
       char[] fisrtChar = first.toCharArray();
       char[] secondChar = second.toCharArray();
@@ -74,9 +76,8 @@ charAt(0) 를 빠트린거랑, for문안에 안전장치로 if문을 하나 더 
 해당 로직은 Stream<String> 에 담은 후에 처리하는 부분으로,
 실제 해당 로직을 적용하는 것은 배보다 배꼽이 더 커보였습니다.
 
-
-최종적으로 처리하는 람다함수는 다음과 같습니다.
-```
+최종적으로 위의 줄인 로직을 기반으로 변경한 람다함수는 다음과 같습니다.
+```java
 public static boolean anagramCheck(String... list) {
     long count = Stream.of(list)
             .map(String::toCharArray)
@@ -90,6 +91,6 @@ public static boolean anagramCheck(String... list) {
 넘어온 list 를 Stream에 담습니다. map 에 toCharArray를 담은 후 peek 로 ArrayList를 sort합니다.
 다시 map으로 sort 된 값을 다시금 string으로 변환합니다.
 distinct로 중복된 값을 제외한 후 count()를 샙니다.
-만약 char로 정렬되지 않을 경우, count는 1이 아니게 됩니다. 
+만약 char로 정렬되지 않을 경우, count는 1이 아니게 됩니다.
 
 계속 공부를 해야한다는 걸 다시금 느낍니다.
