람다 아니고 Stream.

--- a/_posts/2019-09-30-anagram.md
+++ b/_posts/2019-09-30-anagram.md
@@ -4,8 +4,10 @@ title: "anagram 문제"
 comments: true
 ---
 
+아나그램을 손코딩하시오
+---
 
-
+sample code )
 ```java
 anagramCheck("abcd","bcad");
 anagramCheck("abcd","ecad");
@@ -16,9 +18,10 @@ public static boolean anagramCheck(String first, String second) {
     return result;
 }
 ```
-위의 문제에 대해서 손코딩을 해야했습니다.
-아무것도 주어지지 않은 상태라서, 안전하게 기본문법만으로 코딩했습니다.
-(긴장해서 아무생각도 나지 않았다는게 더 정답..)
+
+위의 문제에 대해서 손코딩을 해야했습니다.  
+아무것도 주어지지 않은 상태라서, 안전하게 기본문법만으로 코딩했습니다.  
+(긴장해서 아무생각도 나지 않았다는게 더 정답..)  
 
 ```java
   public static boolean anagramCheck(String first, String second) {
@@ -53,10 +56,11 @@ public static boolean anagramCheck(String first, String second) {
     }
 ```
 
-다음과 같이 작성했습니다.
-실제 손코딩에서는 charAt(0) 를 빠트린거랑, for문안에 안전장치로 if문을 하나 더 쓴거 빼고는 실제 손코딩했던 것과 동일한 로직입니다.
+위와 같이 보드에 작성했는데, 엄청 길기도 하고 board 에 두쪽으로 나눠서 코딩했습니다.  
+실제 손코딩에서는 charAt(0) 를 빠트린거랑,
+for문안에 안전장치로 if문을 하나 더 쓴거 빼고는 실제 손코딩했던 것과 동일한 로직입니다.
 
-실제 원했던 것은 Stream 을 사용하여 코드를 간략하게 작성해야하는 것이 아닌가 싶어,
+실제 손코딩에서 원했던 것은 Stream 을 사용한 간결한 코드로 작성해야하는 것이 아닌가 싶어,
 해당 Stream 으로 어떻게 읽기 편하게 작성해야하는지 공부(연습)해 보았습니다.
 
 우선 기억이 안났던, toCharArray 메소드를 사용하여, char 로 변환해서 처리했습니다.
@@ -71,12 +75,9 @@ public static boolean anagramCheck(String first, String second) {
   }
 ```
 
-30 라인의 길이가 10라인까지 줄어들었습니다.
-이펙티브 자바에서는 strem을 사용해서 처리하는 로직이 있는데,
-해당 로직은 Stream<String> 에 담은 후에 처리하는 부분으로,
-실제 해당 로직을 적용하는 것은 배보다 배꼽이 더 커보였습니다.
+실제로 sort 는 전혀 생각나지 않았고, toCharArray 는 실업무에는 안쓰는 메소드라, 잘못쓸까 걱정되서 빼다보니, 실제 넉넉한 마음으로 짜보니, 30 라인의 길이가 10라인까지 줄어들었습니다.
 
-최종적으로 위의 줄인 로직을 기반으로 변경한 람다함수는 다음과 같습니다.
+최종적으로 위의 줄인 로직을 기반으로 변경한 Stream API 처리로직은 다음과 같습니다.
 ```java
 public static boolean anagramCheck(String... list) {
     long count = Stream.of(list)
@@ -88,6 +89,7 @@ public static boolean anagramCheck(String... list) {
     return count == 1;
 }
 ```
+
 넘어온 list 를 Stream에 담습니다. map 에 toCharArray를 담은 후 peek 로 ArrayList를 sort합니다.
 다시 map으로 sort 된 값을 다시금 string으로 변환합니다.
 distinct로 중복된 값을 제외한 후 count()를 샙니다.
