relaxedPathChars 와 relaxedQueryChars 추가

--- a/_posts/2017-12-05-TOMCAT8_5.md
+++ b/_posts/2017-12-05-TOMCAT8_5.md
@@ -44,5 +44,14 @@ context.xml 쿠키 관련 허용에 대한 처리해야합니다.
 
 tomcat 버전업시 해당 부분에 대해 참고!
 
+2020-01-02 년 내용 추가합니다.
 
------
+
+```
+<Connector port="80" protocol="HTTP/1.1"
+           connectionTimeout="20000" URIEncoding="UTF-8"
+           redirectPort="8443" relaxedPathChars="[]|" relaxedQueryChars="[]|{}^&#x5c;&#x60;&quot;&lt;&gt;" />
+```
+상위버전부터 tomcat.util.http.parser.HttpParser.requestTargetAllow 도 Deprecated 되었다고 하며,
+server.xml 의
+relaxedPathChars 와 relaxedQueryChars 에 해당 문자를 추가하여 대응가능합니다.
