--- a/_posts/2020-06-19-mariadb.md
+++ b/_posts/2020-06-19-mariadb.md
@@ -48,6 +48,7 @@ Starting MariaDB.200619 18:39:40 mysqld_safe Logging to '/var/lib/mysql/localhos
 200619 18:39:40 mysqld_safe Starting mysqld daemon with databases from /var/lib/mysql
  SUCCESS!
 ```
+
 MariaDB를 실행시킵니다.
 
 
@@ -65,16 +66,15 @@ tcp        0      0 :::3306                     :::*                        LIST
 
 * MariaDB 접속 확인  
 ```
-mysql -uroot -p
+[root@localhost ~]# mysql -uroot -p
 
-> mysql -uroot -p
-Enter password:
-Welcome to the MariaDB monitor.  Commands end with ; or \g.
-Your MariaDB connection id is 5
-Server version: 10.1.22-MariaDB MariaDB Server
-Copyright (c) 2000, 2016, Oracle, MariaDB Corporation Ab and others.
-Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-MariaDB [(none)]> quit
+Enter password:  
+Welcome to the MariaDB monitor.  Commands end with ; or \g.  
+Your MariaDB connection id is 5  
+Server version: 10.1.22-MariaDB MariaDB Server  
+Copyright (c) 2000, 2016, Oracle, MariaDB Corporation Ab and others.  
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.  
+MariaDB [(none)]> quit  
 Bye
 ```
 
