--- a/_posts/2020-07-16-jpa_loop.md
+++ b/_posts/2020-07-16-jpa_loop.md
@@ -1,23 +1,27 @@
 ---
 layout: post
-title: "jpa loop 문제 해결"
+title: "Replace get() with orElse(null)."
 comments: true
 ---
 
-JPA 에러 java.lang.StackOverflowError: null @ManyToOne, @OneToMany
----
+JPA 사용 시,
 
-@ToString
+Optional<Entity> 로 결과값을 RETURN 하게 됩니다.
+해당값을 사용시 Entity 로 처리하려면,
+get을 사용해서 객체로 변환해야하는데, 인텔리J에서는
+다음과 같은 경고를 해줍니다.
 
-어노테이션을 ToString 했는데, OneToMany 같은걸 쓰다보니,
-ToString 에서, ManyToOne 을 호출하고, 해당 클래스를 호출하고,
-해당 클래스에서 다시 호출하면서,
+```
+'Optional.get()' without 'isPresent()' check
+```
 
-무한 루플에 빠진 경우입니다.
+get을 가져와서 사용시 그 전에 isPresent로 실제 객체가 정상적인지를 확인하라는 부분으로,
 
+```java
+if (entity.isPresent()) {
+  Entity a = entity.get();
+}
+```
+형태로 가져와야합니다.  
 
-@Data 를 적용했으면 @Getter 나 @Setter 로 바꾸고,
-@ToString 에는 exlcude를 추가합니다.
-
-@ToString(exclude = "변수명")
-으로 작업을 합니다.
+그게 실을 경우, orElse(null) 로 객체로 바로 변환하도록 합니다.  
