--- a/_posts/2020-09-28-logback.md
+++ b/_posts/2020-09-28-logback.md
@@ -24,7 +24,7 @@ logging:
 ```
 
 특정 경로의 폴더 명을 정의합니다.   
-logging.file.name 을 예전에 logging.file 과 동일합니다.   
+logging.file.name 의 경우, 예전에 만들어졌던 logging.file 과 동일합니다.   
 
 resources 에 logback-spring.xml 에 file.xml 과 console.xml 로 추가합니다.
 
@@ -80,3 +80,13 @@ file.xml
 [패턴레이어주소](http://logback.qos.ch/manual/layouts.html#ClassicPatternLayout)  
 maxHistory를 30일로 설정해서 30일이 지난 로그들은 삭제됩니다.   
 maxFileSize를 100MB로 설정해서 로그 파일 용량이 100MB를 초과하면 자동으로 인덱스가 증가하면서 새로운 로그 파일이 생성됩니다. (시작은 0) 로 하고 %i 로 처리합니다.  
+
+
+
+2020/10/13 추가 내용
+${LOG_FILE} 말고 application.yml 에서 값을 받아오고 싶을 경우
+configuration 안에,
+```
+<springProperty scope="context" name="LOAD_BALANCING" source="server.port"/>
+```
+springProperty 값을 추가하여, 처리하시면 됩니다.  
