service nginx reload

--- a/_posts/2020-10-21-pkix.md
+++ b/_posts/2020-10-21-pkix.md
@@ -48,3 +48,5 @@ upstream xxxapp {
 				{{중략}}
 ```
 server 에서 443 의 별개로, 로컬시에는 80 포트의 server 를 구축하였습니다.
+service nginx reload 시 1s 미만의 지연이 있을 수 있다고 하는데,
+scouter 셋팅 시 별도의 네트워크 오류는 발견되지 못했습니다.
