--- a/_posts/2020-10-21-pkix.md
+++ b/_posts/2020-10-21-pkix.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "3Depth Ehcache redis"
+title: "https PKIX path building failed:"
 comments: true
 ---
 
@@ -19,10 +19,10 @@ upstream xxxapp {
     }
 ```
 
-형태로 xxxapp 을 https 로 호출시 발생하였습니다.
+upstream 을 여러개 두어, 한 서버에 두개의 어플리케이션이 동작하도록 구현이 되어있습니다.  
+해당 서비스는, 내부 서버에 호출을 하는데, 내부 호출을 https 로 호출시 발생하는 문제로 파악되었습니다.   
 
-내부 로컬에서 내부 로컬로 호출할 시,
-굳이 443 으로 호출할 필요가 없을 듯 하여,
+내부 로컬에서 내부 로컬로 호출할 시, 굳이 443 으로 호출할 필요가 없을 듯 하여,   
 
 ```
 		server {
