Thread 무료 사이트 주소추가

--- a/_posts/2020-10-27-heapdump.md
+++ b/_posts/2020-10-27-heapdump.md
@@ -29,3 +29,10 @@ Heap dump file created
 ```
 
 jcmd {pid} Thread.print > {파일명}
+
+
+[Thread 분석 무료 사이트](https://fastthread.io/ft-index.jsp) 를 이용하여 분석을 완료 합니다.  
+
+
+
+
