보기 편하게 수정하기

--- a/_posts/2020-11-12-unity.md
+++ b/_posts/2020-11-12-unity.md
@@ -3,46 +3,49 @@ layout: post
 title: "Unite Seoul 2020을 서둘러 등록해야 하는 이유! 지금 등록하면 룰렛을 5번이나 돌릴 수 있다는 사실!"
 comments: true
 ---
-
-세미나를 좋아하고, Unity 2D에 대해 조금 관심있어, 유투브를 찾다가,  
-별 생각없이 세미나를 등록했습니다.   
-
-![event1](/images/20201112event01.PNG){: width="100%"}
-
-우와 1등 상품이 무려!!!!!  
-룰렛을 돌려봅시다.  
-
-어? 돌리기전에 이상하네요.. 
-
-어? 돌리기도 전에 왜 당첨팝업과, 꽝팝업이 있는걸까요...
-
-
-![event2](/images/20201112event02.PNG){: width="100%"}
-
-
-우리에겐 display none; 을 해결해줄, 크롬 개발자도구가 있잖아요 !!! 
-
-![event3](/images/20201112event03.PNG){: width="100%"}
-
-두둥!! 당첨자에게는 비타 500 !!!!
-
-으응?
-
-그냥 하드코딩으로 박혀있는데요? 5등이? 합격되든 안되든? 
-
-![event4](/images/20201112event04.PNG){: width="100%"}
-
-"에이, 설마아아~ 당첨되면 화면을 덮어씌우겠지~~~~"
-
-하기에는 너무나 정직한 소스였습니다.   
-
-![event5](/images/20201112event05.PNG){: width="100%"}
-
-..............
-
-즐거운 Unite Seoul 2020을 서둘러 등록해야 하는 이유! 지금 등록하면 룰렛을 5번이나 돌릴 수 있습니다!!!  
-당첨되면 비타 500을요!!!! 1~4위까지는 누가 가져가는걸까요. ^-^;  
+   
+세미나를 좋아하고, Unity 2D에 대해 조금 관심있어,
+     
+유투브를 찾다가,    
   
+별 생각없이 세미나를 등록했습니다.     
+   
+![event1](/images/20201112event01.PNG){: width="100%"}
+    
+우와 1등 상품이 무려!!!!!   
+  
+룰렛을 돌려봅시다.    
+    
+어? 돌리기전에 이상하네요..      
+  
+어? 돌리기도 전에 왜 당첨팝업과, 꽝팝업이 있는걸까요...  
+  
+![event2](/images/20201112event02.PNG){: width="100%"}
+  
+우리에겐 display none; 을 해결해줄, 크롬 개발자도구가 있잖아요 !!!   
+  
+![event3](/images/20201112event03.PNG){: width="100%"}
+  
+두둥!! 당첨자에게는 비타 500 !!!!  
+  
+으응?  
+  
+그냥 하드코딩으로 박혀있는데요? 5등이? 합격되든 안되든?   
+  
+![event4](/images/20201112event04.PNG){: width="100%"}
+  
+"에이, 설마아아~ 당첨되면 화면을 덮어씌우겠지~~~~"  
+  
+하기에는 너무나 정직한 소스였습니다.     
+  
+![event5](/images/20201112event05.PNG){: width="100%"}
+   
+..............  
+   
+즐거운 Unite Seoul 2020을 서둘러 등록해야 하는 이유! 지금 등록하면 룰렛을 5번이나 돌릴 수 있습니다!!!    
+당첨되면 비타 500을요!!!! 1~4위까지는 누가 가져가는걸까요. ^-^;    
+  
+
 
 
 
