--- a/_posts/2020-11-12-unity.md
+++ b/_posts/2020-11-12-unity.md
@@ -8,7 +8,9 @@ comments: true
      
 유투브를 찾다가,    
   
-별 생각없이 세미나를 등록했습니다.     
+![event0](/images/20201112event00.PNG){: width="100%"}
+
+okky 에서 광고성 DM을 받아, 별 생각없이 세미나를 등록했습니다.     
    
 ![event1](/images/20201112event01.PNG){: width="100%"}
     
