--- a/_posts/2020-11-12-unity.md
+++ b/_posts/2020-11-12-unity.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Unite Seoul 2020을 서둘러 등록해야 하는 이유! 지금 등록하면 룰렛을 5번이나 돌릴 수 있다는 사실!"
+title: "Unite Seoul 2020을 서둘러 등록할 필요가 없는 이유!!!"
 comments: true
 ---
    
