ssl 인증 해결 관련 작업

--- a/_posts/2020-11-19-SSL_CHECK.md
+++ b/_posts/2020-11-19-SSL_CHECK.md
@@ -29,3 +29,7 @@ This server's certificate chain is incomplete. Grade capped to B.
 중개(체인) 인증서 문제로 확인되어, 결국 인증서 갱신!!!! 
 
 인증서 재발급 받고, 다시 테스트를 진행해야하겠네요.   
+
+ps . 인증서 재발급 받고 Chain issue 가 해결되었습니다.  
+ 
+ ![이미지](/images/20201119SSL.PNG){: width="100%"}
