--- a/_posts/2020-11-25-kafka.md
+++ b/_posts/2020-11-25-kafka.md
@@ -117,6 +117,15 @@ pull 방식이라서 생기는 문제로,
 신규 서버 구축보다는 기존 카프카를 이용하는 형태로 운영중입니다!! 
 (다만, 제가 구성할때, 주키퍼 서버 3대를 구축했는데 사용 CPU가 1~3%만 사용하고 있어, 해당 서버를 별도로 이용하는 방법을 계속 고민중입니다. )
 
+### 결론
+
+- 하나의 토픽으로 다중 consumer이 받아갈수 있는 구조     
+- 대량 지연 실시간 처리가능 및 데이터 공유
+
+
+추가적으로 나중에 그룹으로 별도의 동일 데이터를 가져가 처리할 수 있는 기능이 필요하게 되었을 때,  
+정말 카프카를 유용하게 사용했습니다!  
+다른 메시지 큐보다 지금 운영하는 시스템에 딱 맞었다고 봅니다.  
 
 
 
