--- a/_posts/2021-12-28-log4j.md
+++ b/_posts/2021-12-28-log4j.md
@@ -81,7 +81,9 @@ ext['log4j2.version'] = '2.16.0'
 
 ![log4j2](/images/20211228log4j2.png){: width="100%"}
 
-로 처리했습니다. 
+로 처리했습니다. 그리고 2.17.0 이 나왔다...고 합니다. 
+
+실제 서버에서는 2.15에서도 문제없는 상태라 우선 배제했습니다. 실제 서비스에서는 전부 logback 을 사용하여 문제가 없음.  
 
 
 
