--- a/_posts/2022-04-18-clean_01.md
+++ b/_posts/2022-04-18-clean_01.md
@@ -25,8 +25,16 @@ comments: true
 ![simple2](/images/20220418clean01.jpeg){: width="100%"}
 
 이라는 번역판을 보고, 원문이 너무 궁금해서 확인해보니,   
-비슷하게 씌여있네요!  
 
 ![simple2](/images/20220418clean01.jpeg){: width="100%"}
 
+```
+According to legend, 
+the hexagon was simply used instead of the common rectangle to show 
+that an application can have more than four sides connecting it to other systems or adapters. 
+Within the hexagon, 
+we find our domain entities and the use cases that work with them. 
+```
+
+비슷하게 씌여있네요!  
 
