(doc) : kafka history

--- a/_posts/2020-11-25-kafka.md
+++ b/_posts/2020-11-25-kafka.md
@@ -4,131 +4,88 @@ title: "kafka 를 현재 시스템에 적용한 이유"
 comments: true
 ---
 
-기술면접 중, 현재 시스템에 kafka 를 적용한 이유에 대해서 물어보셨다.  
-내부적인 문제를 조리있게 설명할 자신이 없었는데,(실수할까봐;)  
-그냥 넘어가주셔서, 다음에는 조리있게 설명하기 위해 해당 내용을 정리합니다.  
+[2020-11-25-kafka.md](2020-11-25-kafka.md)
 
-### 기존 시스템
+3년만에 다시 작성하는 kafka 추가 내용.
 
-기존 레거시 시스템은 JAVA의 Bean 객체에 데이터를 담는 것입니다.    
-어플리케이션에 데이터를 담고, 해당 데이터에 Spring Job Scheduler 을 통해, 10초 or 20초 간격마다,   
-데이터를 insert 하는 로직이었습니다.    
-
-
-### 스케일업과 스케일아웃
-
-영업과 운영이 확장되면서 기존 시스템으로 버거운 상황이 생기기 시작했습니다.  
-단순하게,   
-스케일 아웃이란 서버를 여러 대 추가하여 시스템을 확장하는 방법이며,    
-스케일 업은 서버에 CPU나 RAM 등을 추가하여 고성능 부품, 서버로 교환하는 방식이었습니다.    
-
-서비스가 고도화 됨에 따라,  스케일업과 스케일아웃이 동시다발적으로 진행되었고,    
-그로인해 기존 덤프로직으로는 점점 버티기 힘들게 되었습니다.  
-
-### 장애 상황
-
-첫번째 장애의 경우 Major GC로 어플리케이션이 순간 지연이 발생하는 것이었습니다.    
-유입량의 증가로 인해, 10초 와 20 초 정도 담는 Bean 객체의 Heap 영역이 점점 늘어났습니다.  
-해당 데이터를 Major GC를 유발하였고, "Java GC Stop The World time" 이 발생이 되었습니다.  
-(etc. 이때 해당 문제를 해결하기 위해 단순 패러랠 GC에서 CMS 75%를 적용하게 됨)
-
-두번째 장애는 유실률 증가입니다.  
-덤프의 경우, Bean 에 담긴 객체를 temp 객체에 담게, 다시금 해당 Bean 을 초기화하는 작업을 반복했습니다. 
-이 경우,                      
-초기화 하는 그 순간의 유입되는 데이터가 삭제되는 문제가 생길 수 밖에 없었습니다.  
-해당 기능을 해결하기 위해, ConcurrentHashMap 를 적용하거나 구아바(Guava) 등을 고려했으나,  
-순간 유실되더라도 ad tech 는 Thread-Safe 를 보장하지 않더라도 속도를 해결해야하는 숙명을 고려해야했습니다.  
-
-세번째는 db lock 상황이 증가되는 이슈였습니다.  
-스케일 아웃이 발생하면서, 동일 DB에 동일 row에 insert 하는 현상이 빈번하게 발생했습니다.  
-이 이슈는 위의 2가지 이슈보다 더 큰 장애상황을 야기했습니다.  
-dead lock 이 걸리는 순간 해당 lock 상황을 DBA에 프로세스 킬을 하지 않는한, 
-서비스를 잠시 중단해야하는 경우가 생긴 적도 있을 정도로 크리티컬한 상황을 예상할 수 밖에 없었습니다.  
-(feat. 긴급하게, master 와 slave 구조를 만들어, select 는 slave로 하여 dead lock 상황이 발생하더라도 서비스는 안정적으로 운영가능하게 작업.  ) 
-
-
-### 메시지 큐 적용을 고려
-
-기존 덤프로직들을 jvm 의 Bean 객체가 아닌, 다른 곳에 저장 후 처리방식에 대해 논의가 있었습니다.  
-
-1차적으로 몽고 시스템을 적용했으나, MongoDB 영속성 (Persistence) 문제가 있었습니다.  
-Bean 에 담는 객체보다는 데이터 유실률은 좋았으나, 중요 순간 순간, 데이터 검증에 실패하게 되어, 
-메시지 큐에 대해서 고민하게 되었습니다.  
-
-CTO 님은 스파크를 사용하고 싶었고, 휼룡한 개발자분들은 Nosql 쪽보다는 메시지 큐 방식을 더 선호하였습니다.  
-
-1 차적으로 몽고를 테스트 했던 이유는 단순히 현재 몽고가 운영되고 있었기 때문이었으니까요!
-모든 것이 도전인 상황이었습니다.   
-
-좋은 개발자분들이 해당 상황은 메시지 큐 방식이 정당하다는 것을 몽고를 1차적으로 테스트성으로 적용하여, 어설프게나마 증명을 했습니다.  
-남은 것은 좋은 큐를 선택하는 것이 었습니다.  
-
-### Kafka, RabbitMQ, Active MQ 중 카프카를 선택한 이유
-
-카프카가 유명해서?   
-보편적으로 레빗보다는 카프카를 운영에서 많이 쓴다고 하지요.  
-
-두개의 장단점은 다음과 같습니다.  
-RabbitMQ 는 broker가 워커(kafka의 컨슈머)에서 메시지를 push 하는 방식이고,  
-kafka는 컨슈머가 broker 로부터 메시지를 pull 하는 방식입니다.  
-(feat. 카프카의 경우도 RabbitMQ처럼 메시지를 push 하는 방법이 있다고 하셨는데, 그 부분은 조금더 문서를 찾아봐야겠습니다. 제가 모르는 부분이었습니다!)
-
-RabbitMQ 아키텍처  
-  
-```
-범용 메시지 브로커 — 다양한 요청 / 응답, 지점 간 및 게시-구독 통신 패턴을 사용합니다.
-스마트 브로커 / 단순한 소비자 모델 — 브로커가 소비자 상태를 모니터링하는 것과 거의 같은 속도로 소비자에게 일관된 메시지 전달.
-성숙한 플랫폼 — 잘 지원되며 Java, 클라이언트 라이브러리, .NET, Ruby, node.js에서 사용할 수 있습니다. 수십 개의 플러그인을 제공합니다.
-통신 — 동기식 또는 비동기식 일 수 있습니다.
-배포 시나리오 — 분산 배포 시나리오를 제공합니다.
-다중 노드 클러스터 - 클러스터 연합 — 외부 서비스에 의존하지 않지만 특정 클러스터 형성 플러그인은 DNS, API, Consul 등을 사용할 수 있습니다.
-```
-
-Apache Kafka 아키텍처  
-  
-``` 
-대용량 발행-구독 메시지 및 스트림 플랫폼 — 내구성, 속도 및 확장 성.
-내구성있는 메시지 저장소 — 로그와 같이 서버 클러스터에서 실행되며 주제 (범주)의 레코드 스트림을 유지합니다.
-메시지 — 값, 키 및 타임 스탬프로 구성됩니다.
-Dumb Broker / 스마트 소비자 모델 — 소비자 가 읽은 메시지를 추적하지 않고 읽지 않은 메시지 만 보관합니다. Kafka는 일정 기간 동안 모든 메시지를 보관합니다.
-실행하려면 외부 서비스가 필요합니다 . 일부 경우 Apache Zookeeper.
-```
-
-실질적으로 저희 서버의 경우, 초당 처리되야하는 데이터가 엄청 많아야 하고,
-Consumer가 처리할 수 있을 때 메시지를 가져오므로 자원을 효율적으로 사용 가능하고, 
-항시적으로 데이터를 가지고 있으니까, 결과적으로 카프카를 적용하게 되었습니다.
-
-물론, 카프카도 문제점이 있습니다.  
-pull 방식이라서 생기는 문제로, 
-데이터가 없음에도 정기적인 polling으로 인해 자원을 낭비하는 문제입니다.  
-컨슈머 서버가 계속 while(true) 로 기다리고 있는거지요.  
-
-이러한 단점을 보완하기 위해 실제 데이터가 도착할 때까지 long poll 대기를 할 수 있는 parameter를 지원하기도 합니다.  
-이번 프로젝트의 카프카 리스너에는 해당값을 적용햇습니다. 
+kafka version 1.1.1
 
 
 
-### 그 이후...
+## 프로듀서의 옵션
+- enable.idempotence 옵션을 true로 설정:  
+  멱등성 : 연산을 여러 번 적용하더라도 결과가 달라지지 않는 성질 [원자성 보장]  
+  enable.idempotence를 true로 설정하면,
+  카프카 프로듀서(Producer)가 메시지를 전송할 때 이중 전송 및 재전송을 방지합니다.  
+  즉, 메시지가 중복으로 전송되지 않도록 보장합니다.
+  이는 메시지 전달의 신뢰성을 높이는 데 도움이 됩니다.
 
-제가 그 후 추가하는 모든 서비스는 새로운 서비스를 구축하기보다, 
-기존 서비스를 사용하는 경우가 많았고, 완벽하게 별도로 구축한 카프카 서버는,
-단순 토픽만을 저장하는 용도로 사용하여!!!
+3개의 브로커에 최소 복제2를 만족하면 전송 성공  
 
-신규 서버 구축보다는 기존 카프카를 이용하는 형태로 운영중입니다!! 
-(다만, 제가 구성할때, 주키퍼 서버 3대를 구축했는데 사용 CPU가 1~3%만 사용하고 있어, 해당 서버를 별도로 이용하는 방법을 계속 고민중입니다. )
+- acks 옵션을 all로 설정:  
+acks 옵션을 all로 설정하면 프로듀서가 메시지를 전송한 후 해당 메시지가 모든 인스턴스에 성공적으로 복제될 때까지 대기합니다.  
+이는 메시지의 안정성을 높이는데 도움이 되며, 메시지가 분실되지 않도록 보장합니다.  
+그러나 전송 지연이 발생할 수 있습니다.  
 
-### 결론
+- replication.factor 옵션을 3으로 설정:  
+replication.factor를 3으로 설정하면 카프카 토픽의 파티션(Partition)이 세 개의 복제본을 가지게 됩니다.  
+이는 데이터의 내고장성을 보장하고, 하나 이상의 브로커(Broker)가 실패해도 데이터 손실을 방지합니다.   
+따라서 데이터의 안정성을 높이는데 도움이 됩니다.
 
-- 하나의 토픽으로 다중 consumer이 받아갈수 있는 구조     
-- 대량 지연 실시간 처리가능 및 데이터 공유
-
-
-추가적으로 나중에 그룹으로 별도의 동일 데이터를 가져가 처리할 수 있는 기능이 필요하게 되었을 때,  
-정말 카프카를 유용하게 사용했습니다!  
-다른 메시지 큐보다 지금 운영하는 시스템에 딱 맞었다고 봅니다.  
-
-
-
-  
+- min.insync.replicas 옵션을 2로 설정:  
+min.insync.replicas를 2로 설정하면 메시지를 전송할 때 적어도 두 개의 복제본이 동기화되어야 한다는 조건을 만족해야 합니다.  
+이것은 데이터의 내고장성을 보장하기 위해 사용됩니다.   
+즉, 적어도 두 개의 복제본이 성공적으로 메시지를 수신한 경우에만 프로듀서가 성공으로 간주됩니다.  
+이렇게 설정 옵션을 변경함으로써, 카프카에서 데이터의 신뢰성과 내고장성을 높일 수 있습니다.   
+그러나 이러한 설정 변경은 성능 및 지연에 영향을 미칠 수 있으므로 신중하게 고려해야 합니다.  
 
 
+## 전송 실패시 아래 이미지의 retry에 파일이 생기고 retryok로 이동
+- retryok 에 있는 재처리완료 파일은 3일후 자동 삭제.    
+[DevOps + AI] 카프카, 대규모 클러스터 운영 후기 / if(kakao)dev2022
+https://www.youtube.com/watch?v=SuHtHQkRV7g
+를 보면, retry 가 아닌, For Fault 라는 별도의 카프카를 또 하나 두어 장애처리는 하는 것을 보고 더 괜찮은 생각이라 생각이 들었으나, 
+파일로 저장 후 후처리도 그때 당시에는 괜찮은 전략이었습니다. 
+
+
+## 장애시 처리 / 복구 절차 - 카프카
+
+1. kafka ISR 그룹에 브로커들이 정상적으로 존재하는지 상태 확인  
+  $ bin/kafka-topics.sh -describe --zookeeper localhost:2181  
+  http://{{host}}:{{port}}/clusters/kafka/topics/xxxData  
+
+2. kafka 서버 ISR 상태에 따라 순차적인 재시작, 최소 서버 2대이상 살아있어야 안정적인 운영가능.  
+현재 카프카는 디스크 full로 다운된 현상 말고는 문제가 없음.
+
+3. 처리 현황파악  
+3-1. 각 was의 에러로그 확인  
+   $ curl http://{{host}}:{{port}}/cronwork/monitoring/kafka_error_retrycnt.txt  
+3-2. 텔레그램 연결하여, 알람으로온 전송지연서버의 producer MBeans (record-send-rate) 확인  
+3-4. 재처리 진행 여부 확인 :
+   각 서버의 error log 의 재처리 진행 상황 확인  
+   $ grep KafkaError /home/xxx/logs/log4j/xxx.infolog.log    
+3-5. 각 was 의 컨슈머서버의 인스턴스 확인
+   http://{{host}}:{{port}}/clusters/kafka/consumers/group-billing/topic/xxxx/type/KF
+   Consumer Offset 의 마지막 Offset 값을 확인
+3-6. 컨슈머의 파티션별 offset 을 마지막 offset으로 위치 이동하고
+   $ bin/kafka-consumer-groups.sh --bootstrap-server {{host}}:{{port}} --group group2 --reset-offsets --to-latest --all-topics --execute
+3-7. row단위 데이터 에서 1번에서 확인된 번호의 시간대부터 재시작한 시간의 범위를 재처리 컨슈머로 구동.
+
+-----
+
+카프카는 이벤트 드리븐 아키텍쳐와 스트림 데이터 파이프라인에서 중요한 역활을 수행한다. 스트림 이벤트를 다루는 데 특화되어 있는 카프카는 실시간 데이터를 처리하는데 적합합니다.
+시간 단위 이벤트 데이터를 다루기 위한 타임스탬프 순서를 보장하기 위한 파티션과 메시지 키와 같은 기능이 카프카에 포함되어이 있습니다.  
+
+
+## 메시지 전달 신뢰성
+
+정확히 한번 (Exactly-once) : 
+모든 데이터 처리가 단 한번만 처리.
+이벤트 데이터가 발생되었을때 단 한번만 처리됨.
+
+적어도 한번 (At least once) : 
+네트워크, 브로커 장애 등에 의해서 데이터를 중복 발행, 수행, 적재 됨을 의미.
+어느 누구도 은행에서 이체되었을떄 한번만 되길 원하지 2번 이상 되길 원하지 않음.
+
+최대 한번 (At most once) : 
+관련 장애에 의해 유실되지 않는 것을 원함.  
