(doc) : kafka history v2

--- a/_posts/2020-11-25-kafka.md
+++ b/_posts/2020-11-25-kafka.md
@@ -22,6 +22,43 @@ kafka version 1.1.1
 
 3개의 브로커에 최소 복제2를 만족하면 전송 성공  
 
+
+```java
+
+import org.apache.kafka.clients.producer.KafkaProducer;
+import org.apache.kafka.clients.producer.Producer;
+import org.apache.kafka.clients.producer.ProducerRecord;
+
+// Properties 객체를 생성하고 설정 값 할당
+Properties props = new Properties();
+props.put("bootstrap.servers", "host etc .... ");
+props.put("retries", 1);     // 재시도 횟수
+props.put("batch.size", 65536); // 크기기반 일괄처리
+props.put("linger.ms", 100);   // 시간기반 일괄처리
+props.put("buffer.memory", 33554432); // 전송대기 버퍼
+props.put("max.request.size", 1048576); // 요청 최대크기
+props.put("min.insync.replicas", 2); // 최소 복제
+props.put("enable.idempotence", true); // 데이터 중복 개선.
+props.put("max.in.flight.requests.per.connection", 1); // 수신 미확인 요청의 최대 수
+props.put("request.timeout.ms", 5000); // 전송후 request 타임아웃 시간 RETRY
+props.put("max.block.ms", 100); // 전송후 응답시간
+props.put("compression.type", "gzip");
+props.put("acks", "all");
+props.put("key.serializer", "org.apache.kafka.common.serialization.StringSerializer");
+props.put("value.serializer", "org.apache.kafka.common.serialization.StringSerializer");
+
+// Kafka 프로듀서를 생성
+Producer<String, String> producer = new KafkaProducer<>(props);
+
+// 메시지를 보내려면 ProducerRecord를 생성하고 send 메서드로 전송
+ProducerRecord<String, String> record = new ProducerRecord<>("topic-name", "key", "value");
+producer.send(record);
+
+// 프로듀서를 닫아 리소스를 정리
+producer.close();
+
+```
+
 - acks 옵션을 all로 설정:  
 acks 옵션을 all로 설정하면 프로듀서가 메시지를 전송한 후 해당 메시지가 모든 인스턴스에 성공적으로 복제될 때까지 대기합니다.  
 이는 메시지의 안정성을 높이는데 도움이 되며, 메시지가 분실되지 않도록 보장합니다.  
@@ -73,8 +110,9 @@ https://www.youtube.com/watch?v=SuHtHQkRV7g
 
 -----
 
-카프카는 이벤트 드리븐 아키텍쳐와 스트림 데이터 파이프라인에서 중요한 역활을 수행한다. 스트림 이벤트를 다루는 데 특화되어 있는 카프카는 실시간 데이터를 처리하는데 적합합니다.
-시간 단위 이벤트 데이터를 다루기 위한 타임스탬프 순서를 보장하기 위한 파티션과 메시지 키와 같은 기능이 카프카에 포함되어이 있습니다.  
+카프카는 이벤트 드리븐 아키텍쳐와 스트림 데이터 파이프라인에서 중요한 역활을 수행하며, 
+스트림 이벤트를 다루는 데 특화되어 있는 카프카는 실시간 데이터를 처리하는데 적합합니다.  
+시간 단위 이벤트 데이터를 다루기 위한 타임스탬프 순서를 보장하기 위한 파티션과 메시지 키와 같은 기능이 카프카에 포함되어이 있습니다.    
 
 
 ## 메시지 전달 신뢰성
@@ -88,4 +126,4 @@ https://www.youtube.com/watch?v=SuHtHQkRV7g
 어느 누구도 은행에서 이체되었을떄 한번만 되길 원하지 2번 이상 되길 원하지 않음.
 
 최대 한번 (At most once) : 
-관련 장애에 의해 유실되지 않는 것을 원함.  
+관련 장애에 의해 유실되지 않는 것을 원함. 
