(doc) : 기술부채를 바라보는 시각 2

--- a/_posts/2023-10-23-code_debt.md
+++ b/_posts/2023-10-23-code_debt.md
@@ -14,7 +14,6 @@ comments: true
 ```
 기술적 부채(技術的 負債, technical debt)란, 
 **사회와 각 개인들로 이루어진 소프트웨어 등의 결함에 따라서 새로운 기능을 개발하는 데 장애요인이 발생하는 것을 말함.**
-
 ```
 
 부채가 이자를 내고 돈을 쓰는 시점을 당기는 것처럼 기술 부채는 기술적으로 해결되어야할 문제를 뒤로 미루고, 
@@ -29,11 +28,11 @@ comments: true
 
 # 망해가는 회사 프로세스 
 
-악취 나는 코드/작성되지 않는 테스트 => 개발속도 저하/ 품질 저하 => 비지니스 속도 저하/고객만족감소 -> 수익감소 -> 기술적 채무 상환 보류 -> 악취나는 코드/작성되지 않는 테스트(반복)
+악취 나는 코드/작성되지 않는 테스트 => 개발속도 저하/ 품질 저하 => 비지니스 속도 저하/고객만족감소 => 수익감소 => 기술적 채무 상환 보류 => 악취나는 코드/작성되지 않는 테스트(반복)
 
 # 성공하는 회사의 프로세스 
 
-향상된 코드/자동화 테스트 => 개발속도 증가/품질 향상 => 비지니스 속도 증가 -> 고객 만족도증가/수익증가 -> 기술적 자산에 대한 투자 -> 향상된 코드(반복)
+향상된 코드/자동화 테스트 => 개발속도 증가/품질 향상 => 비지니스 속도 증가 => 고객 만족도증가/수익증가 => 기술적 자산에 대한 투자 => 향상된 코드(반복)
 
 
 # 기술 부채를 어떻게 하면 없앨 수 있을까요?
@@ -130,8 +129,7 @@ comments: true
 Dead code detection을 수행하여 불필요한 코드를 제거함으로써 기술 부채를 해결할 수 있습니다.   
 
 - static analyzing tool
-- 며칠 전 (이때 네이버 컨퍼런스가 있었습니다! 링크(https://deview.kr/data/deview/session/attach/%5B225%5D%EB%9F%B0%ED%83%80%EC%9E%84+%EB%8D%B0%EB%93%9C%EC%BD%94%EB%93%9C+%EB%B6%84%EC%84%9D+Scavenger+-+%EB%8B%B9%EC%8B%A0%EC%9D%98+%EC%BD%94%EB%93%9C%EB%8A%94+%EC%83%9D%EA%B0%81%EB%B3%B4%EB%8B%A4+%EB%A7%8E%EC%9D%B4+%EC%A3%BD%EC%96%B4%EC%9E%88%EB%8B%A4..pdf)) 
-Naver Deview 2일차의 런타임 데드 코드 분석 도구 Scavenger - 당신의 코드는 생각보다 많이 죽어있다. 이 내용도 도움이 될 거 같습니다. 
+- Naver Deview 2일차의 런타임 데드 코드 분석 도구 Scavenger - 당신의 코드는 생각보다 많이 죽어있다. 이 내용도 도움이 될 거 같습니다. 
 
 **Continuous migration**: 기술 부채를 해결하기 위해서는 최신 기술과 도구를 적극적으로 도입해야 합니다.   
 Continuous migration은 이전 시스템을 새로운 시스템으로 지속적으로 이전시켜가는 작업입니다.   
