(doc) : 2023-11-27-AI_WORK.md

--- a/_posts/2023-11-27-AI_WORK.md
+++ b/_posts/2023-11-27-AI_WORK.md
@@ -13,6 +13,9 @@ comments: true
 
 그러한 부분이, 인공지능 제대로 일 시키기 라는 책에서도 잘 나오고 있습니다. 
 
+
+![WORK_AI](/images/20231127_CHAT.png){: width="100%"}
+
 5년 뒤에는 과연 개발자가 할일이 있을까 싶을 정도로, 챗GPT 가 매우 좋은 코드 컨밴션을 가지고 코드를 작성하며,  
 개념적인 내용이나, 여러 디자인패턴들을 잘 사용하고 있습니다.  
 
