--- a/_posts/2023-11-27-AI_WORK.md
+++ b/_posts/2023-11-27-AI_WORK.md
@@ -8,15 +8,16 @@ comments: true
 
 [![YouTube Video](https://img.youtube.com/vi/rZwTASKb5Ss/0.jpg)](https://www.youtube.com/watch?v=rZwTASKb5Ss)
 
-위 동영상은 프롬프트에서 원하는 걸 명확하게 요구해야하거나 역활부여에 대한 프롬프트 팁에 대한 설명과 함께,
+위 유투브 동영상은 프롬프트에서 원하는 걸 명확하게 요구해야하거나 역활부여에 대한 프롬프트 팁에 대한 설명과 함께,
 챗GPT 를 잘 활용할 수 있는 내용들의 유익한 유투브 내용이었습니다. 
 
-그러한 부분이, 인공지능 제대로 일 시키기 라는 책에서도 잘 나오고 있습니다. 
-
+그러한 부분이, 인공지능 제대로 일 시키기 라는 책에서도 잘 나오고 있습니다.
 
 ![WORK_AI](/images/20231127_CHAT.png){: width="100%"}
 
-5년 뒤에는 과연 개발자가 할일이 있을까 싶을 정도로, 챗GPT 가 매우 좋은 코드 컨밴션을 가지고 코드를 작성하며,  
+5년 뒤에는 과연 개발자가 할일이 있을까 싶을 정도로, 
+현재 챗GPT 가 매우 좋은 코드 컨밴션을 가지고 코드를 작성하며,  
+
 개념적인 내용이나, 여러 디자인패턴들을 잘 사용하고 있습니다.  
 
 저는 일을 할 때, 챗GPT 를 매우 많이 사용합니다.  
@@ -24,7 +25,7 @@ comments: true
 혹은 어려운 작업을 할때도 챗GPT 를 잘 사용합니다.  
 
 내가 원하는 결과를 얻기 위해, 적어도 3번 이상 같은 질문을 해야하는데, 이 책을 읽고 나서, 
-좀더 원하는 방법을 잘 찾게 되었습니다.  
+좀더 원하는 방법을 잘 찾는 노하우를 얻게 되었습니다.  
 
 책에 나오는 기본 단계 프롬프트 엔지니어링의 정리는 다음과 같습니다. 
 
@@ -38,21 +39,21 @@ comments: true
 8. 반복 질문, 7번 항목을 이용하여, 동일한 질문을 조금씩 튜닝해서 원하는 겨로가에 최대한 맞출 수 있도록 처리함. 
 9. 불필요한 정보를 제외하여 원하는 응답의 범위를 조절함.  
 
-직업 상 해외 이탈리아 업체들과 이메일로 소통을 해야하는 경우가 많은데, 
-'비지니스 이메일 영어로 작성해줘' 라는 한글을
+직업 상 해외 이탈리아 업체들과 이메일로 소통을 해야하는 경우가 많은데, 이 때도 챗GPT 를 자주 사용합니다.
+'이러이러한 내용을 비지니스 이메일 영어로 작성해줘' 라는 한글을 요청을
 '비지니스 이메일'을 한글로 작성해주거나, 
-'영어' 로만 작성을 하는 경우가 많은 데, 이 책을 읽으면서
+'영어' 로 이상하게 번역하는 경우가 작성을 하는 경우가 많고, 
 '영어로 작성된 비지니스 이메일을' 이라고 해도, 한글로 적다보니, 한글로 작성하는 경우가 많았습니다. 
 
 그런데, 프롬프트 방법을 알게되어,
 ```
 비지니스 이메일을 작성해줘 {영어로 작성}
 ```
-로, 조금 더 명확하게 명령을 내릴 수 있게 되어, 프롬프트에 대해 조금 더 학습할 수 있었습니다.  
+로, 조금 더 명확하게 명령을 내릴 수 있게 되어, 업무의 편의성이 증가되었습니다.  
+이 책을 읽으면서, 프롬프트에 대해 조금 더 학습할 수 있었습니다.    
 
 아직 {결과{앞의 프롬프트와 동일}} 과 같은 패턴을 동일하게 하는 법보다, 그냥 새롭게 동일한 내용을 챗GPT 에게 물어보는 것이 더 익숙하지만, 
 책에 내용은 30% 정도 그림 생성 AI 쪽에 대한 프롬프트를 할애하고 있어, 그 쪽에 관심이 있는
 책에서 알려준 프롬프트 마켓플라이스를 좀더 검색해보면서, 
 좋은 프롬프트 엔지니어링을 배워야할 듯 합니다.  
-
 
