(doc) : 20231127_CHAT1.png

--- a/_posts/2023-11-27-AI_WORK.md
+++ b/_posts/2023-11-27-AI_WORK.md
@@ -13,7 +13,7 @@ comments: true
 
 그러한 부분이, 인공지능 제대로 일 시키기 라는 책에서도 잘 나오고 있습니다.
 
-![WORK_AI](/images/20231127_CHAT.png){: width="100%"}
+![WORK_AI](/images/20231127_CHAT1.png){: width="100%"}
 
 5년 뒤에는 과연 개발자가 할일이 있을까 싶을 정도로, 
 현재 챗GPT 가 매우 좋은 코드 컨밴션을 가지고 코드를 작성하며,  
