(doc) : 그래들 버전업 문구 수정

--- a/_posts/2024-01-08-AI_GLADLE.md
+++ b/_posts/2024-01-08-AI_GLADLE.md
@@ -4,7 +4,9 @@ title: "Gradle 6.x to 8.x 업그레이드 가이드"
 comments: true
 ---
 
-Gradle 6.x에서 8.x로의 업그레이드 시, 여러 변경 사항이 있습니다. 아래는 주요 변경 내용입니다:
+Gradle 6.x에서 8.x로의 업그레이드 시, 여러 변경 사항이 있습니다.
+
+아래는 주요 변경 내용입니다:
 
 ## 1. 의존성 관리 변경
 
