chore: update image alt text in DataGrip post

--- a/_posts/2024-10-23-DataGrip.md
+++ b/_posts/2024-10-23-DataGrip.md
@@ -6,6 +6,6 @@ comments: true
 
 쿼리를 검색할때마다 창을 계속 띄우도록 하는 데이타그립 설정
 
-![WORK_AI](/images/20241023_DATAGRIP.png){: width="100%"}
+![DATAGRIP](/images/20241023_DATAGRIP.png){: width="100%"}
 
 datagrip 에서 검색할때마다 덮어씌우지 않고, 새로운 창으로 띄우는 설정값.
